[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interlink-echo-plugin"
version = "0.1.0"
description = "A minimal echo interLink plugin — logs all API calls and returns valid stub responses"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["interlink", "plugin", "kubernetes", "hpc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

dynamic = [
    "dependencies"
]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[project.scripts]
interlink-echo-plugin = "interlink_echo_plugin.__main__:main"

[project.urls]
Homepage = "https://github.com/chbrandt/interlink-echo-plugin"
Repository = "https://github.com/chbrandt/interlink-echo-plugin"

[tool.setuptools.packages.find]
include = ["interlink_echo_plugin*"]
